fixes for spacings

--- a/packages/react-components/src/components/Tag/Tag.module.scss
+++ b/packages/react-components/src/components/Tag/Tag.module.scss
@@ -78,22 +78,22 @@
   }
 
   &--small {
-    padding: 1px 4px;
+    padding: 1px var(--spacing-1);
     height: 20px;
   }
 
   &--medium {
-    padding: 1px 4px;
+    padding: 1px var(--spacing-1);
     height: 24px;
   }
 
   &--large {
-    padding: 5px 8px;
+    padding: 5px var(--spacing-2);
     height: 32px;
   }
 
   &--xlarge {
-    padding: 5px 12px;
+    padding: 5px var(--spacing-3);
     height: 36px;
   }
 
@@ -103,15 +103,15 @@
     background-color: transparent;
 
     &.tag--medium {
-      padding: 0 7px;
+      padding: 0 calc(var(--spacing-2) - 1px);
     }
 
     &.tag--large {
-      padding: 4px 11px;
+      padding: 4px calc(var(--spacing-3) - 1px);
     }
 
     &.tag--xlarge {
-      padding: 4px 15px;
+      padding: 4px calc(var(--spacing-4) - 1px);
     }
 
     .icon {
